hphp/test/slow/memoize/untyped.php.expectf

Fatal error: <<__Memoize>> is in development. It currently only support args with the following typehints: int, ?int, bool, ?bool, string in %s/test/slow/memoize/untyped.php on line 4
